+ features
* bugfixes
====================== 0.9.24.2 ====================
 * Restore joystick/controller functionality
 * Fix crash when starting game with 2 controllers or more
 * Fix insane amount of droplets appearing when shooting minigun into ocean world edge
 * Limit number of droplets to 50 (temporary bugfix)
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 + Add default controls for controllers (see README)

====================== 0.9.24.1 ====================
 * Fix crash when portable portal device is fired at reduced graphics quality
 * Fix possible crash when starting Hedgewars frontend in fullscreen mode

====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + New game modifier: Enable switch hedgehog at start of turn
 + Change weapon icons: Mudball, air mine
 + Add healing visual effect in Paramedics mode and a few scripts
 + Show remaining ammo when using Birdy egg or RC Plane bomb
 + Add separate control for team chat (default: U)
 + Add separate control for changing hedgehog tags (default: Home)
 + Toggle all hedgehog tags at once with [Precise] + [Change hedgehog tags]
 + Hedgehog tag translucency is now changed with [Switch] + [Change hedgehog tags]
 + When using flying saucer shortly after a jump, stay in-mid air
 + No longer cut off team/hedgehog names when not playing online
 * Fix possible network desynchronization and crash when players rejoin an active game
 * Fix time box being usable in Sudden Death with 0 health decrease
 * Fix chat input key being sometimes registered twice
 * Fix not displaying current volume status after pressing mute key
 * Fix many effects not being correctly recorded by the video recorder
 * Fix quit menu showing incorrect keys if using non-default key bindings
 * Fix script translations not being loaded for Portuguese and Chinese
 * When using seduction, only show “CENSORED” text in English locale

Frontend:
 + Migrate to Qt 5